--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
         "autoprefixer": "^10.4.2",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
+        "flowbite": "^2.5.2",
+        "flowbite-svelte": "^0.47.3",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
         "vite": "^5.0"
     },
     "dependencies": {
+        "@popperjs/core": "^2.11.8",
         "@tailwindcss/aspect-ratio": "^0.4.2",
         "@tailwindcss/typography": "^0.5.15",
-        "flowbite": "^2.5.2",
         "simple-datatables": "^9.2.1"
     }
 }
