--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@popperjs/core": "^2.11.8",
         "@tailwindcss/aspect-ratio": "^0.4.2",
         "@tailwindcss/typography": "^0.5.15",
-        "simple-datatables": "^9.2.1"
+        "simple-datatables": "^9.2.1",
+        "sortablejs": "^1.15.3"
     }
 }
