--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
         "dev": "vite"
     },
     "devDependencies": {
-        "@tailwindcss/forms": "^0.5.2",
         "autoprefixer": "^10.4.2",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
@@ -14,14 +13,13 @@
         "flowbite-svelte": "^0.47.3",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
-        "tailwindcss": "^3.1.0",
         "vite": "^5.0"
     },
     "dependencies": {
         "@popperjs/core": "^2.11.8",
-        "@tailwindcss/aspect-ratio": "^0.4.2",
-        "@tailwindcss/typography": "^0.5.15",
+        "@tailwindcss/vite": "^4.0.3",
         "simple-datatables": "^9.2.1",
-        "sortablejs": "^1.15.3"
+        "sortablejs": "^1.15.3",
+        "tailwindcss": "^4.0.3"
     }
 }
