Technician parts editing

--- a/package.json
+++ b/package.json
@@ -6,20 +6,20 @@
         "dev": "vite"
     },
     "devDependencies": {
-        "autoprefixer": "^10.4.2",
+        "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
         "flowbite": "^2.5.2",
         "flowbite-svelte": "^0.47.3",
         "laravel-vite-plugin": "^1.0",
-        "postcss": "^8.4.31",
+        "postcss": "^8.5.3",
+        "tailwindcss": "^4.0.12",
         "vite": "^5.0"
     },
     "dependencies": {
         "@popperjs/core": "^2.11.8",
         "@tailwindcss/vite": "^4.0.3",
         "simple-datatables": "^9.2.1",
-        "sortablejs": "^1.15.3",
-        "tailwindcss": "^4.0.3"
+        "sortablejs": "^1.15.3"
     }
 }
