--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.11.8",
+        "@tailwindcss/aspect-ratio": "^0.4.2",
+        "@tailwindcss/forms": "^0.5.10",
+        "@tailwindcss/typography": "^0.5.16",
         "@tailwindcss/vite": "^4.0.3",
         "simple-datatables": "^9.2.1",
         "sortablejs": "^1.15.3"
