--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
         "autoprefixer": "^10.4.21",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
-        "flowbite": "^2.5.2",
+        "flowbite": "^3.1.2",
         "flowbite-svelte": "^0.47.3",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.5.3",
-        "tailwindcss": "^4.0.12",
+        "tailwindcss": "^4.0.13",
         "vite": "^5.0"
     },
     "dependencies": {
@@ -24,5 +24,15 @@
         "@tailwindcss/vite": "^4.0.3",
         "simple-datatables": "^9.2.1",
         "sortablejs": "^1.15.3"
-    }
+    },
+    "name": "semixpro.local",
+    "version": "1.0.0",
+    "description": "<p align=\"center\"><a href=\"https://laravel.com\" target=\"_blank\"><img src=\"https://raw.githubusercontent.com/laravel/art/master/logo-lockup/5%20SVG/2%20CMYK/1%20Full%20Color/laravel-logolockup-cmyk-red.svg\" width=\"400\" alt=\"Laravel Logo\"></a></p>",
+    "main": "vite.config.js",
+    "directories": {
+        "test": "tests"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC"
 }
