--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "league/flysystem-aws-s3-v3": "^3.0",
-        "livewire/livewire": "^3.4",
+        "livewire/livewire": "3.6.2",
         "livewire/volt": "^1.0",
         "maatwebsite/excel": "^3.1",
         "orchid/platform": "^14.42",
