--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "concurrently": "^9.0.1",
         "flowbite": "^3.1.2",
         "flowbite-svelte": "^0.47.3",
+        "html5-qrcode": "^2.3.8",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.5.3",
         "tailwindcss": "^4.0.13",
