--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
         "@tailwindcss/typography": "^0.5.16",
         "@tailwindcss/vite": "^4.0.3",
         "simple-datatables": "^9.2.1",
-        "sortablejs": "^1.15.3"
+        "sortablejs": "^1.15.3",
+        "tailwindcss-animate": "^1.0.7"
     },
     "name": "semixpro.local",
     "version": "1.0.0",
