--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.5.3",
         "tailwindcss": "^4.0.13",
-        "vite": "^5.0"
+        "vite": "6.2.5"
     },
     "dependencies": {
         "@popperjs/core": "^2.11.8",
