--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@tailwindcss/aspect-ratio": "^0.4.2",
         "@tailwindcss/forms": "^0.5.10",
         "@tailwindcss/typography": "^0.5.16",
+        "chart.js": "^4.5.0",
         "simple-datatables": "^9.2.1",
         "sortablejs": "^1.15.3",
         "tailwindcss-animate": "^1.0.7"
