--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "html5-qrcode": "^2.3.8",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.5.3",
+        "rollup-plugin-visualizer": "^6.0.3",
         "tailwindcss": "^4.0.13",
         "vite": "6.2.5"
     },
@@ -24,6 +25,7 @@
         "@tailwindcss/forms": "^0.5.10",
         "@tailwindcss/typography": "^0.5.16",
         "chart.js": "^4.5.0",
+        "interactjs": "^1.10.27",
         "simple-datatables": "^9.2.1",
         "sortablejs": "^1.15.3",
         "tailwindcss-animate": "^1.0.7"
