--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@tailwindcss/forms": "^0.5.10",
         "@tailwindcss/typography": "^0.5.16",
         "chart.js": "^4.5.0",
+        "dayjs": "^1.11.13",
         "interactjs": "^1.10.27",
         "simple-datatables": "^9.2.1",
         "sortablejs": "^1.15.3",
