--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "chart.js": "^4.5.0",
         "dayjs": "^1.11.13",
         "interactjs": "^1.10.27",
+        "leaflet": "^1.9.4",
+        "leaflet.markercluster": "^1.5.3",
         "simple-datatables": "^9.2.1",
         "sortablejs": "^1.15.3",
         "tailwindcss-animate": "^1.0.7"
