Schedule component creation in progress (34/50) (Scheduler full rework IN PROGRESS) composer require azuyalabs/yasumi Day view complete (5/8) Making Dashboard Design (in progress 3/4) TODO: Make Dashboard Functionality, Schedule component

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.2",
+        "php": ">=8.2",
+        "azuyalabs/yasumi": "^2.8",
         "barryvdh/laravel-dompdf": "^3.0",
         "intervention/image": "^3.11",
         "laravel/framework": "^11.9",
